# project-gateway

./: .dockerignore  .env  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
benches/: gateway_bench.rs
config/: default.yaml
src/: lib.rs  main.rs
src/config/: mod.rs  watcher.rs
src/docs/: mod.rs
src/gatekeeper/: mod.rs
src/metrics/: mod.rs
src/middleware/: auth.rs  canary.rs  logging.rs  mirror.rs  mod.rs  rate_limit.rs
src/monitoring/: mod.rs
src/routes/: health.rs  mod.rs  users.rs
tests/: integration_tests.rs
